k8s/overlays/prod/backend-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cviche-backend
spec:
  template:
    spec:
      nodeSelector:
        eks.amazonaws.com/nodegroup: cviche-al2023-nodes
      containers:
        - name: backend # Must match the name in base/deployment.yaml
          resources:
            requests:
              cpu: "1"
              memory: "1Gi"
            limits:
              cpu: "1"
              memory: "1Gi"
          volumeMounts:
            - name: auth-config-volume
              mountPath: /app/web_interface/backend/auth_config.yaml
              subPath: auth_config.yaml # Mounts ONLY this file without wiping out existing app files

          # --- Map SAML Private Key ---
            - name: certs-volume
              mountPath: /app/web_interface/backend/certs/sp.key
              subPath: saml.key
            # --- Map SAML Public Certificate ---
            - name: certs-volume
              mountPath: /app/web_interface/backend/certs/sp.crt
              subPath: saml.crt    
      # --- New Volume Definition ---
      volumes:
        - name: auth-config-volume
          configMap:
            name: cviche-auth-config # Automatically links with your configMapGenerator
        # --- Declare the Shared Secret Volume ---
        - name: certs-volume
          secret:
            secretName: cviche-saml-certs
