k8s/overlays/prod/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cviche-ingress
  annotations:
    alb.ingress.kubernetes.io/certificate-arn: ACM_ARN_PLACEHOLDER
